--- a/src/styles/otp-input.css
+++ b/src/styles/otp-input.css
@@ -23,12 +23,14 @@ body {
   }
   
   .inputStyle {
-    width: 3rem !important;
-    height: 3rem;
-    margin: 0 .4rem;
-    font-size: 2rem;
-    border-radius: 4px;
-    border: 1px solid rgba(0, 0, 0, 0.3);
+    width: 50px !important;
+    height: 62px;
+    margin: 0 4px;
+    font-size: 24px;
+    color: #fff;
+    border-radius: 12px;
+    border: 1px solid #7BA099;
+    background: none;
   }
   
   @media only screen and (max-width: 678px) {
@@ -72,10 +74,10 @@ body {
   
   @media only screen and (max-width: 470px) {
     .margin-top--small .inputStyle {
-      width: 2rem !important;
+      /* width: 2rem !important;
       height: 2rem;
       margin: 0 5px;
-      font-size: 1rem;
+      font-size: 1rem; */
     }
   
     .card > form > p {
