fix: update airdrop connect

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,3 +13,18 @@
     height: 100vh;
     overflow: auto;
 }
+
+.gradient-btn {
+    background: linear-gradient(to right, #48ebae, #3d51fc, #49e9b0);
+    color: #fff;
+    font-family: Satoshi;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 900;
+    letter-spacing: 0.125rem;
+    text-transform: uppercase;
+    border-radius: 0.5rem;
+    display: inline-block;
+    user-select: none;
+    cursor: pointer;
+}
