feat: update ui

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,7 +10,7 @@
     position: relative;
     width: 100%;
     min-width: 1080px;
-    height: 100vh;
+    min-height: 100vh;
     overflow: auto;
 }
 
