update token list for test

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -28,6 +28,9 @@
     user-select: none;
     cursor: pointer;
 }
+.gradient-btn:disabled {
+    cursor:not-allowed;
+}
 .gradient-secondary-btn {
     border: 1px solid transparent;
   border-radius: 8px;
@@ -35,4 +38,7 @@
   background-origin: padding-box, border-box;
   background-image: linear-gradient(to right, #222, #222), linear-gradient(90deg, #8F41E9, #578AEF);
 
+}
+.gradient-secondary-btn:disabled {
+    cursor: not-allowed;
 }
