update invite process & fix referral eth value

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -30,6 +30,7 @@
 }
 .gradient-btn:disabled {
     cursor:not-allowed;
+    opacity: 0.4 !important;
 }
 .gradient-secondary-btn {
     border: 1px solid transparent;
