refactor: update ui & routes

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -22,7 +22,7 @@
     font-style: normal;
     font-weight: 900;
     letter-spacing: 0.125rem;
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
     border-radius: 0.5rem;
     display: inline-block;
     user-select: none;
