fix: Modify style of about img

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -17,16 +17,12 @@
 .gradient-btn {
     background: linear-gradient(to right, #48ebae, #3d51fc, #49e9b0);
     color: #fff;
+    border-radius: 6px;
     font-family: Satoshi;
-    font-size: 1rem;
-    font-style: normal;
-    font-weight: 900;
-    letter-spacing: 0.125rem;
-    /* text-transform: uppercase; */
-    border-radius: 0.5rem;
-    display: inline-block;
-    user-select: none;
-    cursor: pointer;
+    font-size: 16px;
+    font-weight: 700;
+    text-align: left;
+    border: none;
 }
 .gradient-btn:disabled {
     cursor:not-allowed;
