--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,7 +8,7 @@
 .main {
     position: relative;
     width: 100%;
-    min-width: 1080px;
+    /* min-width: 1080px; */
     min-height: 100vh;
     overflow: auto;
     font-family: 'Satoshi';
