fix: Optimize button

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -73,6 +73,9 @@
   border-radius: 8px;
   background: linear-gradient(to right, #48ECAE, #3E52FC, #49CED7);
 }
+.padX{
+  padding: 0 20px;
+}
 .bg-mobile{
   background: rgba(0,0,0,0.9) !important; 
   }
