fix: update nft v2 issues

--- a/src/components/DrawAnimationV2/index.css
+++ b/src/components/DrawAnimationV2/index.css
@@ -25,7 +25,7 @@
       background: #22272D;
       width: 8rem;
       height: 2rem;
-      padding: 0px 21px;
+      padding: 6px 0;
       justify-content: center;
       align-items: center;
       color: #FFF;
@@ -34,8 +34,7 @@
       font-size: 12px;
       font-style: normal;
       font-weight: 700;
-      line-height: 24px; /* 200% */
-      padding: 0;
+      line-height: 12px; /* 200% */
   }
   
   .lottery-item.active {
